--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,14 @@ body {
     width: 80%;
     max-width: 760px;
     margin: auto;
-    background: #edf3f7;
+    background-color: cornsilk;
 color: #333;    
 }
 
 /*----- TYPOGRAPHY -----*/
 h1, h2 {
     font-weight: normal;
-    color: blueviolet;
+    color: crimson;
     text-align: center;
 }
 
@@ -41,7 +41,7 @@ h2{
 
 blockquote {
     font-size: 1.414em;
-    #color: blueviolet;
+    #color: brown;
     hanging-punctuation: first;
     text-indent: -0.44em;
 }
@@ -63,11 +63,11 @@ header p {
 
 /*---------STYLING LINES ---------*/
 a {
-    color: antiquewhite;
+    color: chocolate;
     text-decoration: none;
 }
 a:hover {
-    color: antiquewhite;
+    color: brown;
     border-bottom: 1px dotted;
 }
 
@@ -78,7 +78,7 @@ nav {
     left: 0;
     margin: 0;
     width: 100%;
-    background-color: aquamarine;
+    background-color: crimson;
     padding: 1em 0;
     font-size: 0.75em;
 }
@@ -102,7 +102,7 @@ nav a {
 
 nav a:hover {
     border-bottom: none;
-    color: cadetblue;
+    color: brown;
     transition: all 0.2s ease-in-out;
 }
 
