--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ h2{
 
 blockquote {
     font-size: 1.414em;
-    #color: brown;
+    color: dimgray;
     hanging-punctuation: first;
     text-indent: -0.44em;
 }
@@ -71,7 +71,7 @@ a:hover {
     border-bottom: 1px dotted;
 }
 
-/* ANVIGATION -----*/
+/* NAVIGATION -----*/
 nav {
     position: fixed;
     top: 0;
@@ -97,7 +97,7 @@ nav ul li{
 
 
 nav a {
-    color: cadetblue
+    color: cornsilk;
 }
 
 nav a:hover {
