--- a/css/style2.css
+++ b/css/style2.css
@@ -12,7 +12,7 @@ body {
     width: 80%;
     max-width: 760px;
     margin: auto;
-    background: #cornsilk;
+    background-color: cornsilk;
 color: #333;    
 }
 
@@ -66,7 +66,7 @@ header p {
 hr{
     margin: 3em 0;
     height: 1px;
-    color: blueviolet;
+    color: crimson;
     border: 0 none;
 }
 
