--- a/css/style2.css
+++ b/css/style2.css
@@ -43,7 +43,7 @@ h2{
 
 blockquote {
     font-size: 1.414em;
-    #color: dimgrey;
+    color: dimgray;
     hanging-punctuation: first;
     text-indent: -0.44em;
 }
