--- a/css/style2.css
+++ b/css/style2.css
@@ -21,6 +21,7 @@ h1, h2 {
     font-weight: normal;
     color: crimson;
     text-align: center;
+    font-family: 'Libre Baskerville', serif;
 }
 
 p, blockquote {
