--- a/css/style3.css
+++ b/css/style3.css
@@ -107,6 +107,21 @@ nav a:hover {
     transition: all 0.2s ease-in-out;
 }
 
+ header img {
+    display: block;
+    margin-left: auto;
+    margin: auto;
+     width: 40%;
+    }
+
+
+img {
+   max-width: 100%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
 
 /*------STYLING TABLES-----*/
 table {
