--- a/css/style3.css
+++ b/css/style3.css
@@ -114,7 +114,7 @@ nav a:hover {
      width: 40%;
     }
 
-
+/*---------------images-------*/
 img {
    max-width: 100%;
     height: auto;
@@ -122,15 +122,18 @@ img {
     margin-left: auto;
     margin-right: auto;
     width: 70%;
+}
 
 /*------STYLING TABLES-----*/
 table {
-    margin: auto;
-    display: table;
-    border-collapse: collapse;
-    border-spacing: 3px;
-    margin-bottom: 6em;
+   border: 1px solid black;
     width: 100%;
+    height: 70px;
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+    
+    
 }
 
 caption {
