--- a/css/historystyle3.css
+++ b/css/historystyle3.css
@@ -62,6 +62,16 @@ header p {
     font-size: 1.141em;
 }
 
+/*---------------images-------*/
+img {
+   max-width: 100%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
+
 /*---------STYLING LINES ---------*/
 a {
     color: chocolate;
@@ -70,6 +80,16 @@ a {
 a:hover {
     color: brown;
     border-bottom: 1px dotted;
+}
+
+/*------STYLING TABLES-----*/
+table {
+   border: 1px solid black;
+    width: 100%;
+    height: 70px;
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
 }
 
 /* NAVIGATION -----*/
